<resources>
    <string name="app_name">comhra</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loginButtonText">Login/Register</string>
    <string name="comhrá">comhrá</string>
    <string name="loginText">Login</string>
    <string name="submitPostButtonText">Submit Post</string>
    <string name="createNewPostButtonText">New Post</string>
    <string name="profileButtonText">Profile</string>
    <string name="friendsListButtonText">Friends</string>
    <string name="textPostHint">write a post…</string>
    <string name="photoButtonText">Add Photo</string>
    <string name="galleryButtonText">Gallery</string>
    <string name="postTextViewDesc">Post Text</string>
    <string name="PosterName">Poster Name</string>
    <string name="postDate">Post Date</string>
    <string name="profilePhoto">Profile Photo</string>
    <string name="postImage">Post Image</string>
    <string name="deletePost">Delete Post</string>
    <string name="addComment">Add Comment</string>
    <string name="deletePostDialog">Are you sure you want to delete this post?</string>
    <string name="deletePostConfirm">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="comment">write a comment…</string>
    <string name="deleteCommentDialog">Are you sure you want to delete this comment?</string>
    <string name="bio">Bio:</string>
    <string name="email">Email:</string>
    <string name="location">Location:</string>
    <string name="birthday">Birthday:</string>
    <string name="location_text_goes_here">[location text goes here]</string>
    <string name="bio_text_goes_here">[bio text goes here]</string>
    <string name="email_goes_here">[email goes here]</string>
    <string name="birthday_goes_here">[birthday goes here]</string>
    <string name="display_name_here">[display name here]</string>
    <string name="display_pronouns_here">[display pronouns here]</string>
    <string name="profilePhotoDesc">user profile photo</string>
    <string name="logoDesc">Comhrá Logo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="displayNameHint">Enter your name</string>
    <string name="emailHint">you@example.com</string>
    <string name="pronouns">enter your pronouns</string>
    <string name="name">name</string>
    <string name="bioDesc">about you</string>
    <string name="locationHint">where are you?</string>
    <string name="birthdayHint">when\'s your birthday?</string>
    <string name="backButton">Back</string>
</resources>