<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewProfileConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewProfileFragment">

    <TextView
        android:id="@+id/profileEmailView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhotoView" />

    <TextView
        android:id="@+id/profileEmailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:text="@string/email_goes_here"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileEmailView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profileNameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/display_name_here"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoViewProfile" />

    <ImageView
        android:id="@+id/profilePhotoView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/profilePhotoDesc"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNameView"
        app:srcCompat="@drawable/profile_icon" />

    <ImageView
        android:id="@+id/logoViewProfile"
        android:layout_width="239dp"
        android:layout_height="155dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logoDesc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comhr__logo" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="35dp"
        android:text="@string/edit_profile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailText" />
</androidx.constraintlayout.widget.ConstraintLayout>