<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostDetailActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/commentsRecycler"
        android:layout_width="339dp"
        android:layout_height="370dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:itemCount="0" />

    <Button
        android:id="@+id/deletePost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/deletePost"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/addComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:text="@string/addComment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/newCommentText"
        android:layout_width="359dp"
        android:layout_height="73dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/grey"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment"
        android:inputType="textMultiLine"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@+id/deletePost"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePhoto2"
            android:layout_width="42dp"
            android:layout_height="37dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/profilePhoto"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterNameTextView2"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/posterNameTextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/PosterName"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@tools:sample/full_names" />

        <ImageView
            android:id="@+id/postImageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/postImage"
            app:layout_constraintStart_toEndOf="@+id/profilePhoto2"
            app:layout_constraintTop_toBottomOf="@+id/postTextView2" />

        <TextView
            android:id="@+id/postTextView2"
            android:layout_width="252dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="25dp"
            android:contentDescription="@string/postTextViewDesc"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTextView2"
            android:layout_width="174dp"
            android:layout_height="16dp"
            android:layout_marginStart="116dp"
            android:layout_marginTop="19dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/postDate"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postImageView2"
            tools:text="@tools:sample/date/ddmmyy" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>