<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileFragment">

    <ImageView
        android:id="@+id/profilePhotoEdit"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="131dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/fui_ic_anonymous_white_24dp"
        android:contentDescription="@string/profilePhoto"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEditDisplayName"
        app:srcCompat="@drawable/profile_icon" />

    <EditText
        android:id="@+id/profileEditDisplayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@null"
        android:hint="@string/displayNameHint"
        android:imeOptions="actionDone"
        android:inputType="text|textAutoCorrect"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comhra_logo2" />

    <EditText
        android:id="@+id/profileEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:background="@null"
        android:ems="10"
        android:hint="@string/emailHint"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/profileEmail"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/profileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="64dp"
        android:text="Email:"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhotoEdit" />

    <ImageView
        android:id="@+id/comhra_logo2"
        android:layout_width="239dp"
        android:layout_height="155dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/comhr__logo" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:layout_marginBottom="35dp"
        android:text="@string/save_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileEmailEditText" />

    <ImageButton
        android:id="@+id/photoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="68dp"
        android:src="@android:drawable/ic_menu_camera"
        app:layout_constraintBottom_toTopOf="@+id/profileEmailEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/profilePhotoEdit" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginBottom="56dp"
        android:text="back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>